--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
@@ -26,7 +25,7 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9Tq5b3GZqVX990L8HlCAkRqN826s_MZw" async defer></script>
   <link href="build/main.css" rel="stylesheet">
 
 </head>
