--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -13,37 +13,11 @@
       <div class="fundo-perfil">
         <div class="imagem_fundo" [style.background-image]="getImage(perfil_imagem)">
         </div>
+        <button ion-button color="default" small class="botao-seguir">Seguir</button>
+        <button ion-button color="danger" small class="botao-denunciar" (click)="presentPopover($event)">Denunciar</button>
         <h3 class="nome_usuario">{{ perfil_nome }}</h3>
       </div>
     </div>
-  
-    <ion-toolbar class="buttons_header"> 
-      <ion-segment style="color: #000" item-end>
-        <button *ngIf="btnTop" ion-button color="light" style="margin-left: -8px;box-shadow: none; color: blue;" (click)="alterarTopNews(topOrNews)">
-          <ion-icon name="arrow-up"></ion-icon>
-          {{topOrNews}}
-        </button>
-        <button *ngIf="btnNews" ion-button color="light" style="margin-left: -8px;box-shadow: none;">
-          <ion-icon name="arrow-up"></ion-icon>
-          Top
-        </button>
-        <ion-segment-button aria-pressed="true" id="btt" value="1">
-          <ion-icon name="contacts"></ion-icon>
-        </ion-segment-button>
-        <ion-segment-button value="3" (click)="alterarLocal('bairro')">
-          Bairro
-        </ion-segment-button>
-        <ion-segment-button value="4" (click)="alterarLocal('cidade')">
-          Cidade
-        </ion-segment-button>
-        <ion-segment-button value="5" (click)="alterarLocal('estado')">
-          Estado
-        </ion-segment-button>
-        <ion-segment-button value="6" (click)="alterarLocal('pais')">
-          País
-        </ion-segment-button>
-      </ion-segment>
-    </ion-toolbar>
 
       <ion-toolbar id="sendbar" color="light" style="height: 45px; min-height: 0px;">
         <ion-item>
