--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -88,6 +88,14 @@
 
 
 <ion-content #contentRef (ionScroll)="scrollingFun($event)">
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Puxe para Recarregar"
+      refreshingSpinner="crescent"
+      refreshingText="Recaregando...">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-card *ngFor="let item of feed">
     <ion-item>
       <ion-avatar item-start>
@@ -104,6 +112,7 @@
     </ion-card-content>
 
     <ion-row>
+
       <ion-col>
         <img>
           <button (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
@@ -112,18 +121,27 @@
             <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
           </button>
       </ion-col>
+
       <ion-col>
         <button (click)="comments( item.id_anuncio )" ion-button icon-left clear small>
           <ion-icon name="text"></ion-icon>
           <div>{{ item.comments }}</div>
         </button>
       </ion-col>
+
       <ion-col>
-          <button ion-button icon-left clear small>
+        <button ion-button icon-left clear small>
           <ion-icon name="md-locate"></ion-icon>
-        <ion-badge (click)="navigate(item.lat, item.lng)" item-end >{{ item.distance }} {{ item.unit }}</ion-badge>
-      </button>
+          <ion-badge (click)="navigate(item.lat, item.lng)" item-end >{{ item.distance }} {{ item.unit }}</ion-badge>
+        </button>
       </ion-col>
+
+      <ion-col>
+        <button ion-button icon-left clear small (click)="denunciarPost( item )">
+          Denunciar
+        </button>
+      </ion-col>
+
     </ion-row>
 
   </ion-card>
