first and last at same time i'd guess

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -32,7 +32,10 @@
           <ion-icon name="arrow-up"></ion-icon>
           Top
         </button>
-      <ion-segment-button aria-pressed="true" id="btt" value="1" (click)="seguidores()">
+      <ion-segment-button value="1">
+        <ion-icon name="locate"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button aria-pressed="true" id="btt" value="2" (click)="seguidores()">
         <ion-icon name="contacts"></ion-icon>
       </ion-segment-button>
       <ion-segment-button value="3" (click)="alterarLocal('bairro')">
