--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -116,13 +116,13 @@
 
     <ion-row>
 
-      <ion-col>
-        <img>
-          <button (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
-            <ion-icon id="arrow{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId" name="md-arrow-up"></ion-icon>
-            <div style="color: #00a2ed" id="top{{ item.id_anuncio }}" *ngIf="item.status_top || item.usuario == userId">Top {{ item.likes }}</div>
-            <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
-          </button>
+      <ion-col col-6>
+        <button *ngIf="userId != item.id" (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
+          <ion-icon id="arrow{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId" name="md-arrow-up"></ion-icon>
+          <div style="color: #00a2ed" id="top{{ item.id_anuncio }}" *ngIf="item.status_top || item.usuario == userId">Top {{ item.likes }}</div>
+          <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
+        </button>
+        <a class="texto-excluir" *ngIf="userId == item.id">Excluir</a>
       </ion-col>
 
       <ion-col>
@@ -130,20 +130,17 @@
           <ion-icon name="text"></ion-icon>
           <div>{{ item.comments }}</div>
         </button>
-      </ion-col>
-
-      <ion-col>
         <button ion-button icon-left clear small>
           <ion-icon name="md-locate"></ion-icon>
           <ion-badge (click)="navigate(item.lat, item.lng)" item-end >{{ item.distance }} {{ item.unit }}</ion-badge>
         </button>
       </ion-col>
 
-      <ion-col>
+      <!--<ion-col>
         <button ion-button icon-left clear small (click)="denunciarPost( item )">
           Denunciar
         </button>
-      </ion-col>
+      </ion-col>-->
 
     </ion-row>
 
