--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -13,9 +13,9 @@
     <div class="fundo-perfil">
       <div class="imagem_fundo" [style.background-image]="getImage(perfil_imagem)">
       </div>
-      <button *ngIf="seguindo" ion-button color="default" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguindo</button>
-      <button *ngIf="!seguindo" ion-button color="default" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
-      <button ion-button color="danger" small class="botao-denunciar" (click)="presentPopover($event)">Denunciar</button>
+      <button *ngIf="seguindo" ion-button color="default" small class="botao-seguindo" (click)="seguir(perfilId, userId)">Seguindo</button>
+      <button *ngIf="!seguindo" ion-button color="light" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
+      <img src="assets/imgs/plug.png" class="botao-denunciar" (click)="presentPopover($event)">
       <h3 class="nome_usuario">{{ perfil_nome }}</h3>
     </div>
   </div>
@@ -36,7 +36,7 @@
     </ion-row>
   </ion-item>
 
-      <ion-toolbar id="sendbar" color="light" style="height: 45px; min-height: 0px;">
+      <!--<ion-toolbar id="sendbar" color="light" style="height: 45px; min-height: 0px;">
         <ion-item>
             <ion-input [(ngModel)]="texto" placeholder="O que gostaria de informar?"></ion-input>
             <ion-avatar item-start>
@@ -53,7 +53,7 @@
             <ion-icon name="send"></ion-icon>
           </button>
         </ion-buttons>
-      </ion-toolbar>
+      </ion-toolbar>-->
 </ion-header>
 
 <ion-content padding>
@@ -72,23 +72,18 @@
         <p>{{ item.texto }}</p>
       </ion-card-content>
       <ion-row>
-        <ion-col>
-          <button (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
+        <ion-col col-6>
+          <button *ngIf="userId != item.id" (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
             <ion-icon id="arrow{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId" name="md-arrow-up"></ion-icon>
             <div style="color: #00a2ed" id="top{{ item.id_anuncio }}" *ngIf="item.status_top || item.usuario == userId">Top {{ item.likes }}</div>
             <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
           </button>
+          <a class="texto-excluir" *ngIf="userId == item.id">Excluir</a>
         </ion-col>
         <ion-col>
           <button (click)="comments( item.id_anuncio )" ion-button icon-left clear small>
             <ion-icon name="text"></ion-icon>
-            <div>{{ item.comments }}</div>
-          </button>
-        </ion-col>
-        <ion-col>
-          <button (click)="deleteAnuncio( item )" ion-button icon-left clear small>
-            <ion-icon name="trash"></ion-icon>
-            Deletar
+            <p>Comentar</p>
           </button>
         </ion-col>
       </ion-row>
