--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,11 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar color="dark">
-    <ion-title></ion-title>
-  </ion-navbar>
-
+  
 </ion-header>
 
 
@@ -32,12 +28,10 @@
     </p>
   </div>
   <ng-template #facebookLogin>
-    <button ion-button icon-right (click)="login()">
-      Login with
-      <ion-icon name="logo-facebook"></ion-icon>
-    </button>
-    <button ion-button icon-right (click)="cadastrar('will-kg@hotmail.com', 'Willian Alves', 'https://scontent.xx.fbcdn.net/v/t1.0-1/p50x50/11813515_950106465040645_4723295867195234113_n.jpg?oh=')">
+    <img class="logo-login" src="assets/imgs/logo.png">
+    <img class="button-facebook" src="assets/imgs/facebook_entrar.png" (click)="login()">
+    <a class="button-temp" (click)="cadastrar('will-kg@hotmail.com', 'Willian Alves', 'https://scontent.xx.fbcdn.net/v/t1.0-1/p50x50/11813515_950106465040645_4723295867195234113_n.jpg?oh=')">
       Teste Registro
-    </button>
+    </a>
   </ng-template>
 </ion-content>
