--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -6,15 +6,18 @@
 -->
 <ion-header>
 
-	<ion-navbar color="dark">
-		<ion-title>perfil</ion-title>
-	</ion-navbar>
+  <ion-navbar color="dark">
+    <ion-title>perfil</ion-title>
+  </ion-navbar>
   <div style="width: 100%">
     <div class="fundo-perfil">
       <div class="imagem_fundo" [style.background-image]="getImage(perfil_imagem)">
       </div>
-      <button *ngIf="seguindo" ion-button color="default" small class="botao-seguindo" (click)="seguir(perfilId, userId)">Seguindo</button>
-      <button *ngIf="!seguindo" ion-button color="light" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
+      <div class="button-like">
+        <span class="bola"></span>
+        <button *ngIf="seguindo" ion-button color="default" small class="botao-seguindo" (click)="seguir(perfilId, userId)">Seguindo</button>
+        <button *ngIf="!seguindo" ion-button color="default" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
+      </div>
       <img src="assets/imgs/plug.png" class="botao-denunciar" (click)="presentPopover($event)">
       <h3 class="nome_usuario">{{ perfil_nome }}</h3>
     </div>
@@ -36,7 +39,7 @@
     </ion-row>
   </ion-item>
 
-      <!--<ion-toolbar id="sendbar" color="light" style="height: 45px; min-height: 0px;">
+  <!--<ion-toolbar id="sendbar" color="light" style="height: 45px; min-height: 0px;">
         <ion-item>
             <ion-input [(ngModel)]="texto" placeholder="O que gostaria de informar?"></ion-input>
             <ion-avatar item-start>
@@ -62,34 +65,37 @@
       <ion-avatar item-start>
         <img src="{{ item.user_image }}">
       </ion-avatar>
-      <h2>{{ item.nome }} <button *ngIf="item.local != null" (click)="navigate(item.lat, item.lng)" class="botao_local">{{ item.local }}</button></h2>
+      <h2>{{ item.nome }}
+        <button *ngIf="item.local != null" (click)="navigate(item.lat, item.lng)" class="botao_local">{{ item.local }}</button>
+      </h2>
       <p>{{ item.data }}</p>
     </ion-item>
-      <div style="max-height: 340px; overflow: hidden;">
-        <img *ngIf="item.imagem && item.imagem != 'none'" (click)="ampliarImagem(item.imagem, item.texto)" src="https://bluedropsproducts.com/app/uploads/{{ item.imagem }}">
-      </div>
-      <ion-card-content>
-        <p>{{ item.texto }}</p>
-      </ion-card-content>
-      <ion-row>
-        <ion-col col-6>
-          <button *ngIf="userId != item.id" (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear small>
-            <ion-icon id="arrow{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId" name="md-arrow-up"></ion-icon>
-            <div style="color: #00a2ed" id="top{{ item.id_anuncio }}" *ngIf="item.status_top || item.usuario == userId">Top {{ item.likes }}</div>
-            <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
-          </button>
-          <a class="texto-excluir" *ngIf="userId == item.id">Excluir</a>
-        </ion-col>
-        <ion-col>
-          <button (click)="comments( item.id_anuncio )" ion-button icon-left clear small>
-            <ion-icon name="text"></ion-icon>
-            <p>Comentar</p>
-          </button>
-        </ion-col>
-      </ion-row>
-    </ion-card>
-    <ion-infinite-scroll (ionInfinite)="loadMore($event)">
-       <ion-infinite-scroll-content loadingText="Carregando...">    
-      </ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+    <div style="max-height: 340px; overflow: hidden;">
+      <img *ngIf="item.imagem && item.imagem != 'none'" (click)="ampliarImagem(item.imagem, item.texto)" src="https://bluedropsproducts.com/app/uploads/{{ item.imagem }}">
+    </div>
+    <ion-card-content>
+      <p>{{ item.texto }}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col col-6>
+        <button *ngIf="userId != item.id" (click)="top( item.id_anuncio, item.likes, item.status_top )" ion-button icon-left clear
+          small>
+          <ion-icon id="arrow{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId" name="md-arrow-up"></ion-icon>
+          <div style="color: #00a2ed" id="top{{ item.id_anuncio }}" *ngIf="item.status_top || item.usuario == userId">Top {{ item.likes }}</div>
+          <div id="top{{ item.id_anuncio }}" *ngIf="!item.status_top && item.usuario != userId">Top {{ item.likes }}</div>
+        </button>
+        <a class="texto-excluir" *ngIf="userId == item.id">Excluir</a>
+      </ion-col>
+      <ion-col>
+        <button (click)="comments( item.id_anuncio )" ion-button icon-left clear small>
+          <ion-icon name="text"></ion-icon>
+          <p>Comentar</p>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+  <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+    <ion-infinite-scroll-content loadingText="Carregando...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
