--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="dark">
-    <ion-title>perfil</ion-title>
+    <ion-title style="text-align: center;">perfil</ion-title>
   </ion-navbar>
   <div style="width: 100%">
     <div class="fundo-perfil">
@@ -15,8 +15,8 @@
       </div>
       <div class="button-like">
         <span class="bola"></span>
-        <button *ngIf="seguindo" ion-button color="default" small class="botao-seguindo" (click)="seguir(perfilId, userId)">Seguindo</button>
-        <button *ngIf="!seguindo" ion-button color="default" small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
+        <button *ngIf="seguindo" ion-button small class="botao-seguindo" (click)="seguir(perfilId, userId)">Seguindo</button>
+        <button *ngIf="!seguindo" ion-button small class="botao-seguir" (click)="seguir(perfilId, userId)">Seguir</button>
       </div>
       <img src="assets/imgs/plug.png" class="botao-denunciar" (click)="presentPopover($event)">
       <h3 class="nome_usuario">{{ perfil_nome }}</h3>
