--- a/src/pages/comments/comments.html
+++ b/src/pages/comments/comments.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar color="dark">
-    <ion-title>comments</ion-title>
+  <ion-navbar color="dark" text-center>
+    <ion-title>Comentários</ion-title>
   </ion-navbar>
 
 </ion-header>
