--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -147,7 +147,7 @@
     <ion-title class="titulo-recentes" *ngIf="item.hasImage == false && item.local">Recentes nesse local:</ion-title>
     <ion-scroll class="scroll-Images" *ngIf="item.hasImage == false && item.local" scrollX="true" style="width:100%; height:25vw; margin-bottom: 5px;">
       <ion-row nowrap>
-        <img class="imagem-recentes" *ngFor="let image of item.imagem" (click)="ampliarImagem(item.imagem, item.texto)" src="{{ image }}">
+        <img class="imagem-recentes" *ngFor="let image of item.imagem" (click)="ampliarImagem(image)" src="{{ image }}">
       </ion-row>
     </ion-scroll>
 
