photo n splash n stars

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -34,7 +34,7 @@
       <ion-icon color="secondary" name="images" isActive="true" item-start></ion-icon>
         Galeria
     </ion-item>
-    <ion-item style="border-bottom: solid 1px #eaeaea;" (click)="getImage()">
+    <ion-item style="border-bottom: solid 1px #eaeaea;" (click)="getPicture()">
       <ion-icon color="primary" name="camera" isActive="true" item-start></ion-icon>
         Foto/Video
     </ion-item>
