--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -31,26 +31,26 @@
 
     <ion-segment [(ngModel)]="local" color="primary" item-end>
       <button ion-button class="btn-TopOrNews" (click)="alterarTopNews($event)">
-        <img src="assets/imgs/opts.png">
+        <img style="margin-top: 10px;" src="assets/imgs/opts.png">
       </button>
       <ion-segment-button value="proximidade" style="padding-top: 8px;" (ionSelect)="alterarLocal('proximidade')">
-        <img *ngIf="local == 'proximidade'" src="assets/imgs/local_round_blue.png" style="height: 24px;">
-        <img *ngIf="local != 'proximidade'" src="assets/imgs/local_round_black.png" style="height: 24px;">
+        <img *ngIf="local == 'proximidade'" src="assets/imgs/local_round_blue.png" style="height: 24px; margin-top: 5px;">
+        <img *ngIf="local != 'proximidade'" src="assets/imgs/local_round_black.png" style="height: 24px; margin-top: 5px;">
       </ion-segment-button>
       <ion-segment-button value="amigos" (ionSelect)="alterarLocal('amigos')">
-        <ion-icon name="contacts"></ion-icon>
+        <ion-icon name="contacts" style="padding-top: 10px;"></ion-icon>
       </ion-segment-button>
       <ion-segment-button value="bairro" (ionSelect)="alterarLocal('bairro')">
-        Bairro
+        <p>Bairro</p>
       </ion-segment-button>
       <ion-segment-button value="cidade" (ionSelect)="alterarLocal('cidade')">
-        Cidade
+        <p>Cidade</p>
       </ion-segment-button>
       <ion-segment-button value="estado" (ionSelect)="alterarLocal('estado')">
-        Estado
+        <p>Estado</p>
       </ion-segment-button>
       <ion-segment-button value="pais" (ionSelect)="alterarLocal('pais')">
-        País
+        <p>País</p>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
@@ -106,7 +106,7 @@
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-item>
-    <ion-card-content>
+    <ion-card-content style="padding: 0">
       <p>{{ item.texto }}</p>
     </ion-card-content>
     <div style="max-height: 340px; overflow: hidden;">
