--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -64,7 +64,7 @@
       <p>{{ item.texto }}</p>
     </ion-card-content>
     <div style="max-height: 340px; overflow: hidden;">
-      <img *ngIf="item.imagem && item.imagem != 'none'" (click)="ampliarImagem(item.imagem, item.texto)" src="https://bluedropsproducts.com/app/uploads/{{ item.imagem }}">
+      <img *ngIf="item.imagem && item.imagem != 'none'" (click)="ampliarImagem(item.imagem, item.texto)" src="http://18.217.102.194/uploads/{{ item.imagem }}">
     </div>
     <ion-row>
 
