--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -102,8 +102,8 @@
 
     </ion-row>
   </ion-card>
-  <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+  <!-- <ion-infinite-scroll (ionInfinite)="loadMore($event)">
     <ion-infinite-scroll-content loadingText="Carregando...">
     </ion-infinite-scroll-content>
-  </ion-infinite-scroll>
+  </ion-infinite-scroll> -->
 </ion-content>
