--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the FeedPage page.
+  Generated tem late for the FeedPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -31,31 +31,31 @@
 
     <ion-segment [(ngModel)]="local" color="primary" item-end>
       <button ion-button class="btn-TopOrNews" (click)="alterarTopNews($event)">
-        <img style="margin-top: 10px;" src="assets/imgs/opts.png">
+        <img style="margin-top: 3px;" src="assets/imgs/opts.png">
       </button>
-      <ion-segment-button value="proximidade" style="padding-top: 8px;" (ionSelect)="alterarLocal('proximidade')">
-        <img *ngIf="local == 'proximidade'" src="assets/imgs/local_round_blue.png" style="height: 24px; margin-top: 5px;">
-        <img *ngIf="local != 'proximidade'" src="assets/imgs/local_round_black.png" style="height: 24px; margin-top: 5px;">
+      <ion-segment-button value="proximidade" style="margin: 1px; padding-top: 4px; padding-left: 9px;" (ionSelect)="alterarLocal('proximidade')">
+        <img *ngIf="local == 'proximidade'" src="assets/imgs/local_round_blue.png">
+        <img *ngIf="local != 'proximidade'" src="assets/imgs/local_round_black.png">
       </ion-segment-button>
       <ion-segment-button value="amigos" (ionSelect)="alterarLocal('amigos')">
-        <ion-icon name="contacts" style="padding-top: 4px;"></ion-icon>
+        <ion-icon name="contacts" style="padding-top: 0px;"></ion-icon>
       </ion-segment-button>
       <ion-segment-button value="bairro" (ionSelect)="alterarLocal('bairro')">
-        <p style="margin-top: 6px;">Bairro</p>
+        <p style="margin-top: 2px;">Bairro</p>
       </ion-segment-button>
       <ion-segment-button value="cidade" (ionSelect)="alterarLocal('cidade')">
-        <p style="margin-top: 6px;">Cidade</p>
+        <p style="margin-top: 2px;">Cidade</p>
       </ion-segment-button>
       <ion-segment-button value="estado" (ionSelect)="alterarLocal('estado')">
-        <p style="margin-top: 6px;">Estado</p>
+        <p style="margin-top: 2px;">Estado</p>
       </ion-segment-button>
       <ion-segment-button value="pais" (ionSelect)="alterarLocal('pais')">
-        <p style="margin-top: 6px;">País</p>
+        <p style="margin-top: 2px;">País</p>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
 
-  <ion-item class="item-range-range" *ngIf="!platform.is('ios')">
+  <ion-item  class="item-range-range" *ngIf="!platform.is('ios')"no-lines>
     <ion-range class="range-range" min="0" max="1000" step="200" (ionChange)="alterarLocal('range')" [(ngModel)]="range"></ion-range>
   </ion-item>
 
